# cail

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
